# Android-AV-Learning

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/android_av_learning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/android_av_learning/: MainActivity.java
app/src/main/java/com/android/android_av_learning/application/: WApplication.java
app/src/main/moduleManifest/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/android_av_learning/: ExampleUnitTest.java
customScript/: common_c_config.gradle  common_config.gradle  common_package.gradle  config.gradle
ffmpeg/: build.gradle
ffmpeg/src/main/cpp/interface/: native-ffmpeg-lib.cpp  native-ffmpeg-lib.h
ffmpeg/src/main/java/com/android/ffmpeg/: MainActivity.java
ffmpeg/src/main/java/util/: FfmpegUtil.java
ffmpeg/src/test/java/com/android/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
module_common/: build.gradle
module_common/src/androidTest/java/com/android/module_common/: ExampleInstrumentedTest.java
module_common/src/main/: AndroidManifest.xml
module_common/src/main/java/base/activity/: BaseActivity.java  BaseMvpActivity.java  BaseMvvmActivity.java
module_common/src/main/java/base/application/: ApplicationConfig.java  BaseApplication.java
module_common/src/main/java/base/dialogfragment/: BaseDialogFragment.java  BaseMvpDialogFragment.java  LoadingDialog.java
module_common/src/main/java/base/manager/: BaseActivityManager.java
module_common/src/main/java/base/mvp/model/: IBaseModel.java
module_common/src/main/java/base/mvp/presenter/: BasePresenter.java  IBasePresenter.java
module_common/src/main/java/base/mvp/view/: IBaseView.java
module_common/src/main/java/base/mvvm/viewmodel/: BaseViewModel.java
module_common/src/main/java/com/android/module_common/: MainActivity.java
module_common/src/main/java/com/android/module_common/application/: MainApplication.java
module_common/src/main/moduleManifest/: AndroidManifest.xml
module_common/src/main/res/layout/: activity_main.xml
module_common/src/main/res/values/: themes.xml
module_common/src/test/java/com/android/module_common/: ExampleUnitTest.java
module_fdkaac/: build.gradle
module_fdkaac/src/androidTest/java/com/android/module_fdkaac/: ExampleInstrumentedTest.java
module_fdkaac/src/main/: AndroidManifest.xml
module_fdkaac/src/main/cpp/: CMakeLists.txt
module_fdkaac/src/main/cpp/aacdecoder/: AACDecoder.cpp  AACDecoder.h
module_fdkaac/src/main/cpp/aacencoder/: AACEncoder.cpp  AACEncoder.h
module_fdkaac/src/main/cpp/adtshead/: ADTSHead.cpp  ADTSHead.h
module_fdkaac/src/main/cpp/armeabi-v7a/include/: FDK_audio.h  aacdecoder_lib.h  aacenc_lib.h
module_fdkaac/src/main/cpp/interface/: native-fdkaac-lib.cpp  native-fdkaac-lib.h
module_fdkaac/src/main/java/com/android/module_fdkaac/: MainActivity.java
module_fdkaac/src/main/java/util/: FdkAacUtil.java
module_fdkaac/src/main/modelManifest/: AndroidManifest.xml
module_fdkaac/src/main/moduleManifest/: AndroidManifest.xml
module_fdkaac/src/main/res/layout/: activity_main.xml
module_fdkaac/src/main/res/values/: strings.xml
module_fdkaac/src/test/java/com/android/module_fdkaac/: ExampleUnitTest.java
module_ffmpeg/: build.gradle
module_ffmpeg/src/androidTest/java/com/android/ffmpeg/: ExampleInstrumentedTest.java
module_ffmpeg/src/main/: AndroidManifest.xml
module_ffmpeg/src/main/cpp/: CMakeLists.txt
module_ffmpeg/src/main/cpp/arm64-v8a/include/libavutil/: mem.h  pixfmt.h
module_ffmpeg/src/main/cpp/interface/: native-ffmpeg-lib.cpp  native-ffmpeg-lib.h
module_ffmpeg/src/main/java/com/android/ffmpeg/: MainActivity.java
module_ffmpeg/src/main/java/com/android/module_ffmpeg/: MainActivity.java
module_ffmpeg/src/main/java/util/: FfmpegUtil.java
module_ffmpeg/src/main/moduleManifest/: AndroidManifest.xml
module_ffmpeg/src/main/res/layout/: activity_main.xml
module_ffmpeg/src/main/res/values-night/: themes.xml
module_log/: build.gradle
module_log/src/androidTest/java/com/android/module_log/: ExampleInstrumentedTest.java
module_log/src/main/: AndroidManifest.xml
module_log/src/main/cpp/: CMakeLists.txt
module_log/src/main/cpp/interface/: native-log-lib.cpp  native-log-lib.h
module_log/src/main/cpp/nativecatcher/: NativeCatcher.cpp  NativeCatcher.h
module_log/src/main/java/com/android/module_log/: MainActivity.java
module_log/src/main/moduleManifest/: AndroidManifest.xml
module_log/src/main/res/values/: strings.xml
module_log/src/test/java/com/android/module_log/: ExampleUnitTest.java
module_opensl_es/: build.gradle
module_opensl_es/src/androidTest/java/com/module_opensl_es/: ExampleInstrumentedTest.java
module_opensl_es/src/main/: AndroidManifest.xml
module_opensl_es/src/main/cpp/: CMakeLists.txt
module_opensl_es/src/main/cpp/interface/: native-opensl_es-lib.cpp  native-opensl_es-lib.h
module_opensl_es/src/main/cpp/opensl_es/: Opensl_es.cpp  Opensl_es.h
module_opensl_es/src/main/java/com/module_opensl_es/util/: Opensl_esUtil.java
module_opensl_es/src/main/moduleManifest/: AndroidManifest.xml
module_opensl_es/src/main/res/values/: strings.xml
module_opensl_es/src/test/java/com/module_opensl_es/: ExampleUnitTest.java
module_record_and_play/: build.gradle
module_record_and_play/src/androidTest/java/com/android/module_record_and_play/: ExampleInstrumentedTest.java
module_record_and_play/src/main/: AndroidManifest.xml
module_record_and_play/src/main/java/com/android/module_record_and_play/: MainActivity.java
module_record_and_play/src/main/java/util/: RecordPlayUtil.java  RecordUtil.java
module_record_and_play/src/main/moduleManifest/: AndroidManifest.xml
module_record_and_play/src/main/res/layout/: activity_main.xml
module_record_and_play/src/main/res/values/: strings.xml
module_record_and_play/src/test/java/com/android/module_record_and_play/: ExampleUnitTest.java
(+6 files in other folders)
